[package]
name = "panproto-parse"
description = "Tree-sitter full-AST parsers and emitters for panproto language protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-gat = { workspace = true }
panproto-schema = { workspace = true }
panproto-protocols = { workspace = true }
panproto-grammars = { workspace = true, optional = true }

tree-sitter = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["grammars"]
grammars = ["dep:panproto-grammars", "panproto-grammars/default"]
group-core = ["grammars", "panproto-grammars/group-core"]
group-web = ["grammars", "panproto-grammars/group-web"]
group-systems = ["grammars", "panproto-grammars/group-systems"]
group-jvm = ["grammars", "panproto-grammars/group-jvm"]
group-scripting = ["grammars", "panproto-grammars/group-scripting"]
group-data = ["grammars", "panproto-grammars/group-data"]
group-functional = ["grammars", "panproto-grammars/group-functional"]
group-devops = ["grammars", "panproto-grammars/group-devops"]
group-mobile = ["grammars", "panproto-grammars/group-mobile"]
group-all = ["grammars", "panproto-grammars/group-all"]
lang-actionscript = ["grammars", "panproto-grammars/lang-actionscript"]
lang-ada = ["grammars", "panproto-grammars/lang-ada"]
lang-agda = ["grammars", "panproto-grammars/lang-agda"]
lang-al = ["grammars", "panproto-grammars/lang-al"]
lang-angular = ["grammars", "panproto-grammars/lang-angular"]
lang-apex = ["grammars", "panproto-grammars/lang-apex"]
lang-arduino = ["grammars", "panproto-grammars/lang-arduino"]
lang-asciidoc = ["grammars", "panproto-grammars/lang-asciidoc"]
lang-asm = ["grammars", "panproto-grammars/lang-asm"]
lang-astro = ["grammars", "panproto-grammars/lang-astro"]
lang-awk = ["grammars", "panproto-grammars/lang-awk"]
lang-bash = ["grammars", "panproto-grammars/lang-bash"]
lang-bass = ["grammars", "panproto-grammars/lang-bass"]
lang-batch = ["grammars", "panproto-grammars/lang-batch"]
lang-beancount = ["grammars", "panproto-grammars/lang-beancount"]
lang-bibtex = ["grammars", "panproto-grammars/lang-bibtex"]
lang-bicep = ["grammars", "panproto-grammars/lang-bicep"]
lang-bitbake = ["grammars", "panproto-grammars/lang-bitbake"]
lang-blade = ["grammars", "panproto-grammars/lang-blade"]
lang-brightscript = ["grammars", "panproto-grammars/lang-brightscript"]
lang-bsl = ["grammars", "panproto-grammars/lang-bsl"]
lang-c = ["grammars", "panproto-grammars/lang-c"]
lang-caddy = ["grammars", "panproto-grammars/lang-caddy"]
lang-cairo = ["grammars", "panproto-grammars/lang-cairo"]
lang-capnp = ["grammars", "panproto-grammars/lang-capnp"]
lang-cedar = ["grammars", "panproto-grammars/lang-cedar"]
lang-cedarschema = ["grammars", "panproto-grammars/lang-cedarschema"]
lang-chatito = ["grammars", "panproto-grammars/lang-chatito"]
lang-circom = ["grammars", "panproto-grammars/lang-circom"]
lang-clarity = ["grammars", "panproto-grammars/lang-clarity"]
lang-clojure = ["grammars", "panproto-grammars/lang-clojure"]
lang-cmake = ["grammars", "panproto-grammars/lang-cmake"]
lang-cobol = ["grammars", "panproto-grammars/lang-cobol"]
lang-comment = ["grammars", "panproto-grammars/lang-comment"]
lang-commonlisp = ["grammars", "panproto-grammars/lang-commonlisp"]
lang-cooklang = ["grammars", "panproto-grammars/lang-cooklang"]
lang-corn = ["grammars", "panproto-grammars/lang-corn"]
lang-cpon = ["grammars", "panproto-grammars/lang-cpon"]
lang-cpp = ["grammars", "panproto-grammars/lang-cpp"]
lang-crystal = ["grammars", "panproto-grammars/lang-crystal"]
lang-csharp = ["grammars", "panproto-grammars/lang-csharp"]
lang-css = ["grammars", "panproto-grammars/lang-css"]
lang-csv = ["grammars", "panproto-grammars/lang-csv"]
lang-cuda = ["grammars", "panproto-grammars/lang-cuda"]
lang-cue = ["grammars", "panproto-grammars/lang-cue"]
lang-cylc = ["grammars", "panproto-grammars/lang-cylc"]
lang-d = ["grammars", "panproto-grammars/lang-d"]
lang-dart = ["grammars", "panproto-grammars/lang-dart"]
lang-desktop = ["grammars", "panproto-grammars/lang-desktop"]
lang-devicetree = ["grammars", "panproto-grammars/lang-devicetree"]
lang-diff = ["grammars", "panproto-grammars/lang-diff"]
lang-djot = ["grammars", "panproto-grammars/lang-djot"]
lang-dockerfile = ["grammars", "panproto-grammars/lang-dockerfile"]
lang-dot = ["grammars", "panproto-grammars/lang-dot"]
lang-doxygen = ["grammars", "panproto-grammars/lang-doxygen"]
lang-dtd = ["grammars", "panproto-grammars/lang-dtd"]
lang-earthfile = ["grammars", "panproto-grammars/lang-earthfile"]
lang-ebnf = ["grammars", "panproto-grammars/lang-ebnf"]
lang-editorconfig = ["grammars", "panproto-grammars/lang-editorconfig"]
lang-eds = ["grammars", "panproto-grammars/lang-eds"]
lang-eex = ["grammars", "panproto-grammars/lang-eex"]
lang-elisp = ["grammars", "panproto-grammars/lang-elisp"]
lang-elixir = ["grammars", "panproto-grammars/lang-elixir"]
lang-elm = ["grammars", "panproto-grammars/lang-elm"]
lang-elsa = ["grammars", "panproto-grammars/lang-elsa"]
lang-embedded_template = ["grammars", "panproto-grammars/lang-embedded_template"]
lang-enforce = ["grammars", "panproto-grammars/lang-enforce"]
lang-erlang = ["grammars", "panproto-grammars/lang-erlang"]
lang-facility = ["grammars", "panproto-grammars/lang-facility"]
lang-faust = ["grammars", "panproto-grammars/lang-faust"]
lang-fennel = ["grammars", "panproto-grammars/lang-fennel"]
lang-fidl = ["grammars", "panproto-grammars/lang-fidl"]
lang-firrtl = ["grammars", "panproto-grammars/lang-firrtl"]
lang-fish = ["grammars", "panproto-grammars/lang-fish"]
lang-foam = ["grammars", "panproto-grammars/lang-foam"]
lang-forth = ["grammars", "panproto-grammars/lang-forth"]
lang-fortran = ["grammars", "panproto-grammars/lang-fortran"]
lang-fsharp = ["grammars", "panproto-grammars/lang-fsharp"]
lang-fsharp_signature = ["grammars", "panproto-grammars/lang-fsharp_signature"]
lang-func = ["grammars", "panproto-grammars/lang-func"]
lang-gdscript = ["grammars", "panproto-grammars/lang-gdscript"]
lang-git_config = ["grammars", "panproto-grammars/lang-git_config"]
lang-git_rebase = ["grammars", "panproto-grammars/lang-git_rebase"]
lang-gitattributes = ["grammars", "panproto-grammars/lang-gitattributes"]
lang-gitcommit = ["grammars", "panproto-grammars/lang-gitcommit"]
lang-gitignore = ["grammars", "panproto-grammars/lang-gitignore"]
lang-gleam = ["grammars", "panproto-grammars/lang-gleam"]
lang-glsl = ["grammars", "panproto-grammars/lang-glsl"]
lang-gn = ["grammars", "panproto-grammars/lang-gn"]
lang-go = ["grammars", "panproto-grammars/lang-go"]
lang-godot_resource = ["grammars", "panproto-grammars/lang-godot_resource"]
lang-gomod = ["grammars", "panproto-grammars/lang-gomod"]
lang-gosum = ["grammars", "panproto-grammars/lang-gosum"]
lang-graphql = ["grammars", "panproto-grammars/lang-graphql"]
lang-groovy = ["grammars", "panproto-grammars/lang-groovy"]
lang-gstlaunch = ["grammars", "panproto-grammars/lang-gstlaunch"]
lang-hack = ["grammars", "panproto-grammars/lang-hack"]
lang-hare = ["grammars", "panproto-grammars/lang-hare"]
lang-haskell = ["grammars", "panproto-grammars/lang-haskell"]
lang-haxe = ["grammars", "panproto-grammars/lang-haxe"]
lang-hcl = ["grammars", "panproto-grammars/lang-hcl"]
lang-heex = ["grammars", "panproto-grammars/lang-heex"]
lang-hlsl = ["grammars", "panproto-grammars/lang-hlsl"]
lang-html = ["grammars", "panproto-grammars/lang-html"]
lang-http = ["grammars", "panproto-grammars/lang-http"]
lang-hurl = ["grammars", "panproto-grammars/lang-hurl"]
lang-hyprlang = ["grammars", "panproto-grammars/lang-hyprlang"]
lang-idris = ["grammars", "panproto-grammars/lang-idris"]
lang-ini = ["grammars", "panproto-grammars/lang-ini"]
lang-ispc = ["grammars", "panproto-grammars/lang-ispc"]
lang-janet = ["grammars", "panproto-grammars/lang-janet"]
lang-java = ["grammars", "panproto-grammars/lang-java"]
lang-javascript = ["grammars", "panproto-grammars/lang-javascript"]
lang-jinja2 = ["grammars", "panproto-grammars/lang-jinja2"]
lang-jq = ["grammars", "panproto-grammars/lang-jq"]
lang-jsdoc = ["grammars", "panproto-grammars/lang-jsdoc"]
lang-json = ["grammars", "panproto-grammars/lang-json"]
lang-jsonnet = ["grammars", "panproto-grammars/lang-jsonnet"]
lang-julia = ["grammars", "panproto-grammars/lang-julia"]
lang-just = ["grammars", "panproto-grammars/lang-just"]
lang-kconfig = ["grammars", "panproto-grammars/lang-kconfig"]
lang-kdl = ["grammars", "panproto-grammars/lang-kdl"]
lang-kotlin = ["grammars", "panproto-grammars/lang-kotlin"]
lang-latex = ["grammars", "panproto-grammars/lang-latex"]
lang-lean = ["grammars", "panproto-grammars/lang-lean"]
lang-ledger = ["grammars", "panproto-grammars/lang-ledger"]
lang-less = ["grammars", "panproto-grammars/lang-less"]
lang-linkerscript = ["grammars", "panproto-grammars/lang-linkerscript"]
lang-liquid = ["grammars", "panproto-grammars/lang-liquid"]
lang-llvm = ["grammars", "panproto-grammars/lang-llvm"]
lang-lua = ["grammars", "panproto-grammars/lang-lua"]
lang-luadoc = ["grammars", "panproto-grammars/lang-luadoc"]
lang-luap = ["grammars", "panproto-grammars/lang-luap"]
lang-luau = ["grammars", "panproto-grammars/lang-luau"]
lang-magik = ["grammars", "panproto-grammars/lang-magik"]
lang-make = ["grammars", "panproto-grammars/lang-make"]
lang-markdown = ["grammars", "panproto-grammars/lang-markdown"]
lang-markdown_inline = ["grammars", "panproto-grammars/lang-markdown_inline"]
lang-matlab = ["grammars", "panproto-grammars/lang-matlab"]
lang-mermaid = ["grammars", "panproto-grammars/lang-mermaid"]
lang-meson = ["grammars", "panproto-grammars/lang-meson"]
lang-mojo = ["grammars", "panproto-grammars/lang-mojo"]
lang-move = ["grammars", "panproto-grammars/lang-move"]
lang-netlinx = ["grammars", "panproto-grammars/lang-netlinx"]
lang-nginx = ["grammars", "panproto-grammars/lang-nginx"]
lang-nickel = ["grammars", "panproto-grammars/lang-nickel"]
lang-nim = ["grammars", "panproto-grammars/lang-nim"]
lang-ninja = ["grammars", "panproto-grammars/lang-ninja"]
lang-nix = ["grammars", "panproto-grammars/lang-nix"]
lang-norg = ["grammars", "panproto-grammars/lang-norg"]
lang-nqc = ["grammars", "panproto-grammars/lang-nqc"]
lang-nushell = ["grammars", "panproto-grammars/lang-nushell"]
lang-objc = ["grammars", "panproto-grammars/lang-objc"]
lang-ocaml = ["grammars", "panproto-grammars/lang-ocaml"]
lang-ocaml_interface = ["grammars", "panproto-grammars/lang-ocaml_interface"]
lang-odin = ["grammars", "panproto-grammars/lang-odin"]
lang-org = ["grammars", "panproto-grammars/lang-org"]
lang-pascal = ["grammars", "panproto-grammars/lang-pascal"]
lang-pem = ["grammars", "panproto-grammars/lang-pem"]
lang-perl = ["grammars", "panproto-grammars/lang-perl"]
lang-pgn = ["grammars", "panproto-grammars/lang-pgn"]
lang-php = ["grammars", "panproto-grammars/lang-php"]
lang-pkl = ["grammars", "panproto-grammars/lang-pkl"]
lang-po = ["grammars", "panproto-grammars/lang-po"]
lang-pony = ["grammars", "panproto-grammars/lang-pony"]
lang-postscript = ["grammars", "panproto-grammars/lang-postscript"]
lang-powershell = ["grammars", "panproto-grammars/lang-powershell"]
lang-printf = ["grammars", "panproto-grammars/lang-printf"]
lang-prisma = ["grammars", "panproto-grammars/lang-prisma"]
lang-prolog = ["grammars", "panproto-grammars/lang-prolog"]
lang-promql = ["grammars", "panproto-grammars/lang-promql"]
lang-properties = ["grammars", "panproto-grammars/lang-properties"]
lang-protobuf = ["grammars", "panproto-grammars/lang-protobuf"]
lang-psv = ["grammars", "panproto-grammars/lang-psv"]
lang-pug = ["grammars", "panproto-grammars/lang-pug"]
lang-puppet = ["grammars", "panproto-grammars/lang-puppet"]
lang-purescript = ["grammars", "panproto-grammars/lang-purescript"]
lang-pymanifest = ["grammars", "panproto-grammars/lang-pymanifest"]
lang-python = ["grammars", "panproto-grammars/lang-python"]
lang-ql = ["grammars", "panproto-grammars/lang-ql"]
lang-qml = ["grammars", "panproto-grammars/lang-qml"]
lang-qmldir = ["grammars", "panproto-grammars/lang-qmldir"]
lang-query = ["grammars", "panproto-grammars/lang-query"]
lang-r = ["grammars", "panproto-grammars/lang-r"]
lang-racket = ["grammars", "panproto-grammars/lang-racket"]
lang-re2c = ["grammars", "panproto-grammars/lang-re2c"]
lang-readline = ["grammars", "panproto-grammars/lang-readline"]
lang-regex = ["grammars", "panproto-grammars/lang-regex"]
lang-rego = ["grammars", "panproto-grammars/lang-rego"]
lang-requirements = ["grammars", "panproto-grammars/lang-requirements"]
lang-rescript = ["grammars", "panproto-grammars/lang-rescript"]
lang-robot = ["grammars", "panproto-grammars/lang-robot"]
lang-ron = ["grammars", "panproto-grammars/lang-ron"]
lang-rst = ["grammars", "panproto-grammars/lang-rst"]
lang-ruby = ["grammars", "panproto-grammars/lang-ruby"]
lang-rust = ["grammars", "panproto-grammars/lang-rust"]
lang-scala = ["grammars", "panproto-grammars/lang-scala"]
lang-scheme = ["grammars", "panproto-grammars/lang-scheme"]
lang-scss = ["grammars", "panproto-grammars/lang-scss"]
lang-smali = ["grammars", "panproto-grammars/lang-smali"]
lang-smithy = ["grammars", "panproto-grammars/lang-smithy"]
lang-solidity = ["grammars", "panproto-grammars/lang-solidity"]
lang-sparql = ["grammars", "panproto-grammars/lang-sparql"]
lang-sql = ["grammars", "panproto-grammars/lang-sql"]
lang-squirrel = ["grammars", "panproto-grammars/lang-squirrel"]
lang-ssh_config = ["grammars", "panproto-grammars/lang-ssh_config"]
lang-starlark = ["grammars", "panproto-grammars/lang-starlark"]
lang-svelte = ["grammars", "panproto-grammars/lang-svelte"]
lang-swift = ["grammars", "panproto-grammars/lang-swift"]
lang-tablegen = ["grammars", "panproto-grammars/lang-tablegen"]
lang-tcl = ["grammars", "panproto-grammars/lang-tcl"]
lang-teal = ["grammars", "panproto-grammars/lang-teal"]
lang-templ = ["grammars", "panproto-grammars/lang-templ"]
lang-terraform = ["grammars", "panproto-grammars/lang-terraform"]
lang-test = ["grammars", "panproto-grammars/lang-test"]
lang-textproto = ["grammars", "panproto-grammars/lang-textproto"]
lang-thrift = ["grammars", "panproto-grammars/lang-thrift"]
lang-tlaplus = ["grammars", "panproto-grammars/lang-tlaplus"]
lang-tmux = ["grammars", "panproto-grammars/lang-tmux"]
lang-todotxt = ["grammars", "panproto-grammars/lang-todotxt"]
lang-toml = ["grammars", "panproto-grammars/lang-toml"]
lang-tsv = ["grammars", "panproto-grammars/lang-tsv"]
lang-tsx = ["grammars", "panproto-grammars/lang-tsx"]
lang-turtle = ["grammars", "panproto-grammars/lang-turtle"]
lang-twig = ["grammars", "panproto-grammars/lang-twig"]
lang-typescript = ["grammars", "panproto-grammars/lang-typescript"]
lang-typst = ["grammars", "panproto-grammars/lang-typst"]
lang-udev = ["grammars", "panproto-grammars/lang-udev"]
lang-ungrammar = ["grammars", "panproto-grammars/lang-ungrammar"]
lang-uxntal = ["grammars", "panproto-grammars/lang-uxntal"]
lang-v = ["grammars", "panproto-grammars/lang-v"]
lang-vb = ["grammars", "panproto-grammars/lang-vb"]
lang-verilog = ["grammars", "panproto-grammars/lang-verilog"]
lang-vhdl = ["grammars", "panproto-grammars/lang-vhdl"]
lang-vim = ["grammars", "panproto-grammars/lang-vim"]
lang-vimdoc = ["grammars", "panproto-grammars/lang-vimdoc"]
lang-vue = ["grammars", "panproto-grammars/lang-vue"]
lang-wast = ["grammars", "panproto-grammars/lang-wast"]
lang-wat = ["grammars", "panproto-grammars/lang-wat"]
lang-wgsl = ["grammars", "panproto-grammars/lang-wgsl"]
lang-wit = ["grammars", "panproto-grammars/lang-wit"]
lang-wolfram = ["grammars", "panproto-grammars/lang-wolfram"]
lang-xcompose = ["grammars", "panproto-grammars/lang-xcompose"]
lang-xml = ["grammars", "panproto-grammars/lang-xml"]
lang-yaml = ["grammars", "panproto-grammars/lang-yaml"]
lang-yuck = ["grammars", "panproto-grammars/lang-yuck"]
lang-zig = ["grammars", "panproto-grammars/lang-zig"]
lang-zsh = ["grammars", "panproto-grammars/lang-zsh"]

[lints]
workspace = true
