[package]
name = "panproto-schema"
description = "Schema representation for panproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-gat = { workspace = true }
panproto-expr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

[lints]
workspace = true
