[package]
name = "panproto-vcs"
description = "Schematic version control for panproto — git-like VCS for schema evolution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
panproto-schema = { workspace = true }
panproto-mig = { workspace = true }
panproto-check = { workspace = true }
panproto-lens = { workspace = true }
panproto-gat = { workspace = true }
panproto-inst = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
blake3 = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
