[package]
name = "panproto-wasm"
description = "WASM bindings for panproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
panproto-core = { workspace = true }
panproto-expr = { workspace = true }
panproto-expr-parser = { workspace = true }
panproto-lens-dsl = { workspace = true }
wasm-bindgen = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }

[features]
default = []
format-preserving = ["panproto-core/tree-sitter"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
