[package]
name = "panproto-integration-tests"
version = "0.21.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[lib]
name = "panproto_integration"
path = "src/lib.rs"

[dev-dependencies]
panproto-gat = { path = "../../crates/panproto-gat" }
panproto-schema = { path = "../../crates/panproto-schema" }
panproto-inst = { path = "../../crates/panproto-inst" }
panproto-mig = { path = "../../crates/panproto-mig" }
panproto-lens = { path = "../../crates/panproto-lens" }
panproto-check = { path = "../../crates/panproto-check" }
panproto-protocols = { path = "../../crates/panproto-protocols" }
panproto-core = { path = "../../crates/panproto-core" }
panproto-expr = { path = "../../crates/panproto-expr" }
panproto-expr-parser = { path = "../../crates/panproto-expr-parser" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
